--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,6 @@ jobs:
            git config user.email "602706150@qq.com"
            git config user.name "frto027.bot"
            git checkout -b gh-pages
+           python3 -m pip install pyyaml chevron pytz
            python3 online_checker.py
            git push origin gh-pages -f
