--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Auto Build
 
 # Controls when the workflow will run
 on:
@@ -36,4 +36,5 @@ jobs:
            git checkout -b gh-pages
            python -m pip install pyyaml chevron pytz
            python online_checker.py
+           git commit -m "Robot Update"
            git push origin gh-pages -f
