--- a/.github/workflows/gitee.yml
+++ b/.github/workflows/gitee.yml
@@ -25,9 +25,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: sync with gitee
-      - env:
+        env:
           GITEEKEY: ${{ secrets.GITEEKEY }}
-      - run: |
+        run: |
           cd $GITHUB_WORKSPACE
           echo $GITEEKEY > ~/.ssh/id_rsa
           git remote add gitee git@gitee.com:frto027/peglin-desc-extracter.git
