--- a/.github/workflows/gitee.yml
+++ b/.github/workflows/gitee.yml
@@ -29,13 +29,8 @@ jobs:
           GITEEKEY: ${{ secrets.GITEEKEY }}
         run: |
           cd $GITHUB_WORKSPACE
+          mkdir ~/.ssh
           echo $GITEEKEY > ~/.ssh/id_rsa
           git remote add gitee git@gitee.com:frto027/peglin-desc-extracter.git
           git push gitee gh-pages -f
           echo DELETED > ~/.ssh/id_rsa
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
