--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
-
+    
+  schedule:
+    - cron:  '30 5 * * *'
+    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
